tests/paczka1/small_fuzzy/48714939.err
Error in line 4: FtiYw S159 67,9
Error in line 2: Tt7 S626 20,3
Error in line 11: 9Ks8uCcdSRe A972 87,8
Error in line 13: 9Ks8uCcdSRe S159 16,3
